--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "spatie/laravel-backup": "^6.16",
         "spatie/laravel-permission": "^4.2",
         "vonage/client": "^2.4"
     },
